--- a/htdocs/index.css
+++ b/htdocs/index.css
@@ -72,11 +72,9 @@ th {
 .sidebar-container {
   display: flex;
   flex-direction: column;
-  width: fit-content;
   height: 100%;
   background-color: rgba(174, 183, 194, 0.12);
   padding: 16px 24px;
-  padding-right: 40px;
 }
 
 .sidebar-item {
@@ -85,6 +83,7 @@ th {
   gap: 8px;
   color: #3d3d3d;
   text-decoration: none;
+  width: max-content;
 }
 
 .sidebar-subitem {
@@ -124,10 +123,30 @@ th {
   border-collapse: collapse;
 }
 
+.table-img {
+  width: fit-content;
+  max-width: 100%;
+}
+
+.clickable-row {
+  cursor: pointer;
+}
+
 .footer-container {
   display: flex;
   justify-content: space-between;
   background-color: rgb(234, 232, 228);
   padding: 16px 24px;
   flex: 0 0 auto;
+}
+
+.details-body-content-container {
+  display: flex;
+  padding: 16px;
+}
+
+.details-img {
+  width: fit-content;
+  max-width: 300px;
+  height: 300px;
 }
