--- a/htdocs/index.css
+++ b/htdocs/index.css
@@ -106,7 +106,6 @@ th {
 .about-container {
   display: flex;
   flex-direction: column;
-  width: 80%;
   padding: 16px 24px;
 }
 
@@ -149,4 +148,44 @@ th {
   width: fit-content;
   max-width: 300px;
   height: 300px;
+}
+
+.login-container {
+  width: 75vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 16px 24px;
+  gap: 16px;
+}
+
+.login-input-container {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.login-input {
+  width: 40vw;
+  border-radius: 10px;
+  height: 32px;
+}
+
+.login-input::placeholder {
+  padding-left: 8px;
+}
+
+.login-button {
+  border-radius: 10px;
+  background-color: white;
+  width: 80px;
+}
+
+.login-button:hover {
+  cursor: pointer;
+  background-color: rgb(217, 196, 196);
+}
+
+.login-error-text {
+  color: red;
 }
