добавит удаление продукта

--- a/htdocs/components/header.phtml
+++ b/htdocs/components/header.phtml
@@ -1,3 +1,7 @@
 <section class="header-container">
-  <img src="/images/logo.png" class="header-logo" />Магазин комнатных растений
+  <div class="header-left">
+    <img src="/images/logo.png" class="header-logo" />Магазин комнатных растений
+  </div>
+
+  <a href='../logout'>Выйти</a>
 </section>
