добавит обновление продукта

--- a/htdocs/components/header.phtml
+++ b/htdocs/components/header.phtml
@@ -5,8 +5,8 @@
 
   <?php session_start();
   if (isset($_SESSION['first_name'])): ?>
-    <a href='../logout'>Выйти</a>
+    <a href='/logout'>Выйти</a>
   <?php else: ?>
-    <a href='../login'>Войти</a>
+    <a href='/login'>Войти</a>
   <?php endif; ?>
 </section>
