добавит главную страницу

--- a/htdocs/components/sidebar.phtml
+++ b/htdocs/components/sidebar.phtml
@@ -3,7 +3,7 @@
     <img src="/images/sidebar-logo.png" />
     <p>Главная страница</p>
   </a>
-  <a href="/" class="sidebar-subitem">
+  <a href="/blooming" class="sidebar-subitem">
     <p>Цветущие</p>
   </a>
   <a href="/trees" class="sidebar-subitem">
