--- a/htdocs/components/sidebar.phtml
+++ b/htdocs/components/sidebar.phtml
@@ -11,6 +11,10 @@
     }
     ?>
   </div>
+  <a href="/admin" class="sidebar-item">
+    <img class="sidebar-item-img" src="/images/sidebar-logo.png" />
+    <p>Страница администратора</p>
+  </a>
   <a href="/blooming" class="sidebar-subitem">
     <p>Цветущие</p>
   </a>
