скроет кнопку страницы администратора

--- a/htdocs/components/sidebar.phtml
+++ b/htdocs/components/sidebar.phtml
@@ -1,8 +1,13 @@
 <div class="sidebar-container">
-  <a href="/admin" class="sidebar-item">
-    <img class="sidebar-item-img" src="/images/sidebar-logo.png" />
-    <p>Страница администратора</p>
-  </a>
+  <?php
+  if (isset($_SESSION['first_name'])) {
+    echo "<a href='/admin' class='sidebar-item'>
+      <img class='sidebar-item-img' src='/images/sidebar-logo.png' />
+      <p>Страница администратора</p>
+    </a>";
+  }
+  ?>
+
   <div class="sidebar-item-container">
     <a href="/" class="sidebar-item">
       <img class="sidebar-item-img" src="/images/sidebar-logo.png" />
